# CSV-to-JSON-Converter

./: .gitignore  AUDIT_REPORT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  converter.py  csv_to_json.py
tests/: __init__.py  test_converter.py  test_csv_to_json.py
tests/test_data/: large.csv  sample.csv
